--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Alloy",
-  "description": "A Titanium Network web proxy.",
-  "repository": "https://github.com/titaniumnetwork-dev/alloy/",
-  "logo": "https://avatars.githubusercontent.com/u/47227492?s=200&v=4",
+  "description": "",
+  "repository": "",
+  "logo": "",
   "keywords": ["alloy", "proxy", "web-unblocker", "internet", "alloyproxy"]
 }
